# lattice-boltzmann-hpc

./: CMakeLists.txt  README.md
boltzmann-mpi/: CMakeLists.txt  boltzmann-mpi.c
boltzmann-opencl/: CMakeLists.txt  boltzmann-opencl.c  kernels.cl
boltzmann-openmp/: CMakeLists.txt  boltzmann-openmp.c
